# Beacon

./: .env  .gitignore  Cargo.toml  flake.nix
app/: Cargo.toml
app/src/: main.rs
src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs
