[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
dioxus = "0.6.3"
dotenvy = "0.15.7"
serde = "1.0.224"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
