[workspace]
members = [ ".", "ui" ]

[workspace.dependencies]
serde = "1.0.224"
serde_json = "1.0.143"

[package]
name = "Beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
dotenvy = "0.15.7"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
