[workspace]
members = [ ".", "ui" ]

[workspace.dependencies]
serde = "1.0.224"
serde_json = "1.0.143"

[package]
name = "Beacon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }

dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }



[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
